--- a/templates/base.html
+++ b/templates/base.html
@@ -3,12 +3,13 @@
         <title>ホームページ</title>
     </head>
     <body>
-        <p>メニュー</p>
+        <p>输入一个人名字的英文字母表记，可以判断它原本的语言</p>
+        <p>暂时只支持中文，韩文，阿拉伯文，英文，俄罗斯文</p>
 
-    {% block main_containts %}
-    {% endblock %}
+        {% block main_containts %}
+        {% endblock %}
 
-        <p>脚注</p>
+        <p>{{ version }}</p>
     </body>
 
 </html>
